# miner

./: Makefile.am  README.md  algo-gate-api.c  build_qhash.sh  configure.ac  cpu-miner.c  miner.h
algo/qhash/: qhash-custatevec.c  qhash-cutensornet.c  qhash-gate.h  qhash.c
